# FCTSC-Hackathon-2026

./: .env  .env.example  .gitignore  AGENTS.md  GIOI_THIEU_DU_AN.md  Makefile  README.md  pyproject.toml  pyrightconfig.json  test-failures.txt  test.py
evaluation/: cases.json
frontend/: README.md  app-data.js  app-render.js  app.js  index.html  offline-analyzer.js  scam-library.json  service-worker.js  styles.css
scripts/: __init__.py  evaluate.py  reliability.py
src/: __init__.py  analyzer.py  app.py  catalog.py  characters.py  config.py  database.py  deterministic_checker.py  frontend.py  main.py  schema.py  schemas.py  url_extractor.py  wrapper.py
src/data/: scam_types.json
tests/: __init__.py  _logging.py  factories.py  gemini_test_case.py  labeled_messages.json  live_inputs.json  mock_gemini.py  test_analyzer.py  test_api.py  test_catalog.py  test_config.py  test_database.py  test_deterministic_checker.py  test_evaluation.py  test_frontend.py  test_gemini.py  test_live_api.py  test_regression.py  test_url_extractor.py
