[project]
name = "fct"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.139.0",
    "flask>=3.1.3",
    "google-genai>=2.11.0",
    "httpx>=0.28.1",
    "uvicorn[standard]>=0.30.0",
    "argon2-cffi>=25.1.0",
]
