[project]
name = "fct"
version = "0.1.0"
description = "FastAPI service for structured Vietnamese scam-message analysis"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "uvicorn[standard]>=0.30.0",
    "psycopg[binary]>=3.2.10",
    "python-dotenv>=1.2.2",
]
