[project]
name = "scamcheck"
version = "0.1.0"
description = "FastAPI service for structured Vietnamese scam-message analysis"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139.2",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.2.10",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.51.0",
]
